--- a/airgap/roles/airgap_validation/vars/main.yml
+++ b/airgap/roles/airgap_validation/vars/main.yml
@@ -17,7 +17,7 @@
 provision_config_filename: "{{ role_path }}/../../../input/provision_config.yml"
 provision_vault_path: "{{ role_path }}/../../../input/.provision_vault_key"
 ansible_vault_search_key: "$ANSIBLE_VAULT;"
-conf_file_mode: 0644
+conf_file_mode: "0644"
 provision_config_syntax_fail_msg: "Failed. Syntax errors present in provision_config.yml. Fix errors and re-run playbook again."
 
 # Usage: validate_provision_config.yml
