--- a/provision/roles/provision_validation/vars/main.yml
+++ b/provision/roles/provision_validation/vars/main.yml
@@ -22,9 +22,9 @@ nic_wait_time: 30
 
 # Usage: package_installation.yml
 ansible_galaxy_collection:
-  - ansible.utils:2.5.2
-  - community.general:4.8.7
-pip_version: pip3.8
+  - ansible.utils:2.10.3
+  - community.general:6.6.2
+pip_version: pip3.9
 netaddr_pip_package: netaddr
 pexpect_pip_package: pexpect
 max_retries: 10
@@ -42,8 +42,8 @@ common_packages_provision:
 # Usage: create_provision_ini.yml
 provision_conf_path: "/opt/omnia/.data/provision.ini"
 provision_conf_dest: "/opt/omnia/.data/"
-mount_dir_perm: 0775
-conf_file_mode: 0644
+mount_dir_perm: "0775"
+conf_file_mode: "0644"
 
 # Usage: include_provision_config.yml
 provision_config_filename: "{{ role_path }}/../../../input/provision_config.yml"
@@ -239,7 +239,7 @@ perl-File-BaseDir opencl-headers ocl-icd-devel pmix-devel"
 download_crb_package_fail_msg: "Failed. Unable to download required crb packages libaec, lua-posix, lua-filesystem,
 munge-devel, perl-Switch, rrdtool-devel, lua-devel, hwloc-devel, http-parser-devel, perl-File-BaseDir, opencl-headers, ocl-icd-devel and pmix-devel.
 Make sure crb repos configured in control plane and re-run provision.yml"
-file_permission: 0755
+file_permission: "0755"
 
 # Usage: validate_apptainer_support.yml
 apptainer_support_success_msg: "Validated apptainer_support"
