--- a/provision/roles/xcat_discovery_provision/tasks/postscripts/configure_postscripts_ib.yml
+++ b/provision/roles/xcat_discovery_provision/tasks/postscripts/configure_postscripts_ib.yml
@@ -19,13 +19,14 @@
   when: not ib_status
 
 - name: Configure postscripts for ib
+  when: ib_status
   block:
     - name: Add ib0_ipv41 in networks table
       ansible.builtin.command: chdef -t network -o ib0ipv41 net={{ ib_nic_subnet }} mask=255.255.0.0 mgtifname=ib0
       changed_when: true
 
     - name: Fetch admin_ip and ib_ip from DB
-      ansible.builtin.postgresql_query:
+      community.postgresql.postgresql_query:
         db: omniadb
         login_user: postgres
         query: SELECT node,ib_ip FROM cluster.nodeinfo where node!='control_plane';
@@ -42,4 +43,3 @@
       changed_when: true
       when: item.node in node_list.stdout
       with_items: "{{ ib_query_status.query_result }}"
-  when: ib_status
