--- a/provision/roles/xcat_discovery_provision/tasks/snmp/update_db_snmp.yml
+++ b/provision/roles/xcat_discovery_provision/tasks/snmp/update_db_snmp.yml
@@ -14,23 +14,26 @@
 ---
 
 - name: DB files when switch ip given
+  when: discovery_mechanism | lower == discovery_method_snmp
   block:
     - name: Call snmp utility if switch IP provided
       ansible.builtin.command: |
          {{ python_version }} {{ snmp_utility_path }} {{ pxe_switch_ip }} {{ pxe_switch_snmp_community_string }}
           {{ pxe_nic_start_range }} {{ pxe_nic_end_range }} {{ node_name }} {{ pxe_mapping_path }} {{ domain_name }} {{ roce_enabled }} {{ pxe_mac_address }}
       register: snmp_status
+      changed_when: true
       when: pxe_switch_ip | length > 6
 
     - name: Call bmc utility
       ansible.builtin.command: |
          {{ python_version }} {{ bmc_utility_path }} {{ bmc_nic_start_range }} {{ bmc_nic_end_range }}
+      changed_when: true
       when: bmc_nic_subnet | length > 6
 
     - name: Call ib utility
       ansible.builtin.command: |
          {{ python_version }} {{ ib_utility_path }} {{ ib_nic_start_range }} {{ ib_nic_end_range }}
+      changed_when: true
       when:
         - ib_nic_subnet | length > 6
         - not roce_enabled
-  when: discovery_mechanism | lower == discovery_method_snmp
