--- a/provision/roles/xcat_prepare_cp/vars/main.yml
+++ b/provision/roles/xcat_prepare_cp/vars/main.yml
@@ -36,7 +36,7 @@ common_packages_xcat:
   - unzip
   - bzip2
   - tar
-python_version: python3.8
+python_version: python3.9
 snmp_python_package: easysnmp
 postgres_python_package: psycopg2-binary
 requests_python_package: requests
@@ -99,7 +99,7 @@ xcat_packages:
   - postgresql*
   - perl-DBD-Pg
 package_retry: 3
-file_permission: 0755
+file_permission: "0755"
 xcat_env_path: "/etc/profile.d/xcat.sh"
 xcat_env_msg: "Saving xcat enviornment variables"
 max_retries: 10
