--- a/provision/roles/xcat_repo_manipulate/vars/main.yml
+++ b/provision/roles/xcat_repo_manipulate/vars/main.yml
@@ -26,7 +26,7 @@ provision_os_rhel: "rhel"
 # Usage: check_telemetry_encryption.yml
 telemetry_config_filename: "{{ playbook_dir }}/../input/telemetry_config.yml"
 telemetry_vault_path: "{{ playbook_dir }}/../input/.telemetry_vault_key"
-tele_conf_file_mode: 0644
+tele_conf_file_mode: "0644"
 ansible_vault_search_key: "$ANSIBLE_VAULT;"
 
 # Usage: pre_requisites.yml
@@ -35,10 +35,10 @@ xcat_status_fail_msg: "Failed. xCAT services are not running. Please run provisi
 
 # Usage: create_osimage.yml
 xcat_rhel8_path:
-  - { src: "{{ role_path }}/files/temp_ks_rhel8.tmpl", dest: "/opt/xcat/share/xcat/install/rh/compute.rhels8.tmpl", mode: 0644 }
-  - { src: "{{ role_path }}/files/temp_pre_rhel8", dest: "/opt/xcat/share/xcat/install/scripts/pre.rhels8", mode: 0644 }
-  - { src: "{{ role_path }}/files/temp_post_rhel8", dest: "/opt/xcat/share/xcat/install/scripts/post.rhels8", mode: 0644 }
-  - { src: "{{ role_path }}/files/temp_rhel8.pkglist", dest: "/opt/xcat/share/xcat/install/rh/compute.rhels8.pkglist", mode: 0644 }
+  - { src: "{{ role_path }}/files/temp_ks_rhel8.tmpl", dest: "/opt/xcat/share/xcat/install/rh/compute.rhels8.tmpl", mode: "0644" }
+  - { src: "{{ role_path }}/files/temp_pre_rhel8", dest: "/opt/xcat/share/xcat/install/scripts/pre.rhels8", mode: "0644" }
+  - { src: "{{ role_path }}/files/temp_post_rhel8", dest: "/opt/xcat/share/xcat/install/scripts/post.rhels8", mode: "0644" }
+  - { src: "{{ role_path }}/files/temp_rhel8.pkglist", dest: "/opt/xcat/share/xcat/install/rh/compute.rhels8.pkglist", mode: "0644" }
 
 xcat_rhel8_tmpl: "/opt/xcat/share/xcat/install/rh/compute.rhels8.tmpl"
 xcat_rhel8_post_script: "/opt/xcat/share/xcat/install/scripts/post.rhels8"
@@ -66,7 +66,7 @@ Enable repos which can be used to download sshpass and re-run the provision.yml 
 other_pkg_list_dir: "/install/post/custom/{{ provision_os }}{{ provision_os_version }}"
 other_pkg_list_src: "{{ role_path }}/files/postscripts//omnia.pkglist"
 other_pkg_list_dest: "/install/post/custom/{{ provision_os }}{{ provision_os_version }}/omnia.pkglist"
-other_pkg_list_mode: 0644
+other_pkg_list_mode: "0644"
 crb_repo_packages: "libaec lua-posix lua-filesystem munge-devel perl-Switch rrdtool-devel lua-devel hwloc-devel http-parser-devel
 perl-File-BaseDir opencl-headers ocl-icd-devel pmix-devel"
 download_crb_package_fail_msg: "Failed. Unable to download required crb packages libaec, lua-posix, lua-filesystem,
@@ -88,4 +88,4 @@ telemetry_pkg_list_src: "{{ role_path }}/files/postscripts//telemetry.pkglist"
 
 # Usage: manage_subscription_manager.yml
 rhsm_release_file_path: "/opt/omnia/.data/rhsm_release"
-conf_file_mode: 0644
+conf_file_mode: "0644"
