--- a/input/security_config.yml
+++ b/input/security_config.yml
@@ -70,7 +70,7 @@ ldap_connection_type: "TLS"
 # Make sure certificate is present in the path provided
 # The certificate should have .pem or .crt extension.
 # This variable is mandatory if connection type is TLS
-ldap_ca_cert_path: "/etc/openldap/certs/omnialdap.pem"
+# ldap_ca_cert_path: "/etc/openldap/certs/omnialdap.pem"
 
 # This variable accepts the user home directory path for ldap configuration
 # If nfs mount is created for user home, make sure you provide the
@@ -83,14 +83,21 @@ user_home_dir: "/home/omnia-share"
 # Update this variable if bind dn is different from admin
 # If this value is not provided (when bind is configured in server)
 # then ldap authentication fails
-ldap_bind_username: "admin"
+# ldap_bind_username: "admin"
 
 # If LDAP server is configured with bind dn then bind dn password to be provided
 # If this value is not provided (when bind is configured in server)
 # then ldap authentication fails
-ldap_bind_password: ""
+# ldap_bind_password: ""
 
 # Boolean indicating whether login node is requires security features or not
 # It can be set to true or false
 # By default it is set to false indicating security features will not be configured
 enable_secure_login_node: false
+
+TLS_Cetificates_directory_path: ""
+openldap_config_root_username: "admin"
+openldap_config_root_password: ""     # will be converted to SSHA hash
+openldap_database_root_username: "admin"
+openldap_database_root_password: ""   # will be converted to SSHA hash
+openldap_monitor_root_password: ""    # will be converted to SSHA hash
