--- a/security/roles/ldap_validation/tasks/validate_input.yml
+++ b/security/roles/ldap_validation/tasks/validate_input.yml
@@ -66,5 +66,5 @@
 
   - name: Fail if TLS certificate directory not exists
     ansible.builtin.fail:
-      msg: "{{ ldap_home_dir_fail_msg }}"
+      msg: "{{ ldap_cert_path_fail_msg }}"
     when: not tls_directory.stat.exists
