--- a/security/roles/ldap_validation/vars/main.yml
+++ b/security/roles/ldap_validation/vars/main.yml
@@ -13,5 +13,13 @@
 #  limitations under the License.
 ---
 
+success_msg_config_root_password: "Config password valid"
+fail_msg_config_root_password: Config password invalid"
+success_msg_database_root_password: "Database password valid"
+fail_msg_database_root_password: "Database password invalid"
+success_msg_monitor_root_password: "Monitor password valid"
+fail_msg_monitor_root_password: "Monitor password invalid"
+ldap_cert_path_fail_msg: "LDAP cert path dont exist."
+
 min_length: 8
 max_length: 30
