--- a/security/roles/ldap_server/vars/main.yml
+++ b/security/roles/ldap_server/vars/main.yml
@@ -20,7 +20,7 @@ ldaptoolbox_openldap_database_olcRootDN: "cn={{ hostvars['127.0.0.1']['openldap_
 ldaptoolbox_openldap_monitor_olcRootDN: "cn=monitor"
 
 python_version: python3.8
-hashing_python_file: "{{ role_path }}/files/generate.hash.py"
+hashing_python_file: "{{ role_path }}/files/generate_hash.py"
 
 directory_perm: "0700"
 
