--- a/security/roles/ldap_server/tasks/ldap_prereq.yml
+++ b/security/roles/ldap_server/tasks/ldap_prereq.yml
@@ -41,7 +41,7 @@
 
 - name: Set variables for OpenLDAP config password
   ansible.builtin.set_fact:
-    ldaptoolbox_openldap_config_olcRootPW_hash: password_hash.stdout
+    ldaptoolbox_openldap_config_olcRootPW_hash: "{{ password_hash.stdout }}"
 
 - name: Genarate password hashes for OpenLDAP database
   delegate_to: localhost
@@ -50,7 +50,7 @@
 
 - name: Set variables for OpenLDAP database password
   ansible.builtin.set_fact:
-    ldaptoolbox_openldap_database_olcRootPW_hash: password_hash.stdout
+    ldaptoolbox_openldap_database_olcRootPW_hash: "{{ password_hash.stdout }}"
 
 - name: Genarate password hashes for OpenLDAP monitor
   delegate_to: localhost
@@ -59,7 +59,7 @@
 
 - name: Set variables for OpenLDAP monitor password
   ansible.builtin.set_fact:
-    ldaptoolbox_openldap_monitor_olcRootPW_hash: password_hash.stdout
+    ldaptoolbox_openldap_monitor_olcRootPW_hash: "{{ password_hash.stdout }}"
 
 - name: Print ansible_facts
   debug:
